--- a/Task C3/Task C3.vcxproj.filters
+++ b/Task C3/Task C3.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Task C3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\VariantSolu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\header\VariantSolu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
